# qgroundcontrol

./: QGCCommon.pri  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.pro  qgroundcontrol.qrc
.qtc_clangd/.cache/clangd/index/: ADSBVehicle.cc.38B2810D08D62E18.idx  ADSBVehicle.h.D884E4FBD748AE9E.idx  ADSBVehicleManager.cc.DE54B4F328C318C4.idx  ADSBVehicleManager.h.953DD24FF0994C53.idx  ADSBVehicleManagerSettings.cc.9F509943EDDD3C29.idx  ADSBVehicleManagerSettings.h.260C443622F2062D.idx  APMAirframeComponent.cc.002E9C0628BB7B18.idx  APMAirframeComponent.h.D4559AF7AD3C1A8B.idx  APMAirframeComponentController.cc.DDC95FC03569F6FD.idx  (+2150 more)
custom-example/: qgcresources.qrc
resources/icons/: test2.icns
src/: AuthBackend.js  QGCApplication.cc  QGCApplication.h  QGCPalette.cc  main.cc  qgcauth.cpp
src/AccountToolbar/: AccountToolbar.qml  CMakeLists.txt
src/FactSystem/: ParameterManagerTest.cc
src/FlightDisplay/: CMakeLists.txt  DataView.qml  FlightDisplayViewUVC.qml  FlyView.qml  FlyViewMap.qml  FlyViewToolStripActionList.qml  FlyViewToolbar.qml  FlyViewVideo.qml  FlyViewWidgetLayer.qml
src/FlightMap/: FlightMap.qml
src/PlanView/: PlanView.qml
src/QmlControls/: QGCMapLabel.qml
src/VideoManager/: VideoManager.cc
src/api/: QGCCorePlugin.cc
src/ui/: AuthTest.qml  AuthWindow.qml  CButton.qml  CMakeLists.txt  LoginPage.qml  MainRootWindow.qml  PasswordResetPage.qml  SignupPage.qml
src/ui/toolbar/: AccountToolbar.qml  CMakeLists.txt  MainToolBar.qml  MainToolBarIndicators.qml  MissionToolbar.qml  MyToolBarMenu.qml  SetupToolbar.qml
(+1 files in other folders)
